--- a/index.html
+++ b/index.html
@@ -1,15 +1,127 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<title>Артём Межейников</title>
+	<title>Artiom Mezheynikov</title>
 	<link rel="stylesheet" href="styles/css/style.css" />
 </head>
 
 <body>
+	<header class="header">
+		<div class="container">
+			<div class="header__top">
+				<div class="logo">
+					<a class="logo__link" href="index.html">
+						<img class="logo__image" src="images/logo/my-logo-v2.png" alt="Logotype">
+					</a>
+				</div>
+
+				<nav class="site-nav">
+					<ul class="site-nav__list">
+						<li class="site-nav__item">
+							<a class="site-nav__link" href="#!">home</a>
+						</li>
+						<li class="site-nav__item">
+							<a class="site-nav__link" href="#!">about</a>
+						</li>
+						<li class="site-nav__item">
+							<a class="site-nav__link" href="#!">service</a>
+						</li>
+						<li class="site-nav__item">
+							<a class="site-nav__link" href="#!">portfolio</a>
+						</li>
+					</ul>
+				</nav>
+
+				<div class="header__mobile-site-nav mobile-site-nav">
+					<input id="site-nav-switch" type="checkbox">
+					<label class="mobile-site-nav__burger" for="site-nav-switch">
+						<span></span>
+					</label>
+					<!-- <div class="mobile-site-nav__opasity-block"></div> -->
+					<div class="mobile-site-nav__wrapper">
+						<nav class="mobile-site-nav__box">
+							<label class="mobile-site-nav__box-close" for="site-nav-switch">
+								<span></span>
+								<span></span>
+							</label>
+							<ul class="site-nav__list">
+								<li class="site-nav__item">
+									<a class="site-nav__link" href="#!">home</a>
+								</li>
+								<li class="site-nav__item">
+									<a class="site-nav__link" href="#!">about</a>
+								</li>
+								<li class="site-nav__item">
+									<a class="site-nav__link" href="#!">service</a>
+								</li>
+								<li class="site-nav__item">
+									<a class="site-nav__link" href="#!">portfolio</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+				<a class="header__top-button" href="#!">contact</a>
+			</div>
+
+			<div class="header__banner banner">
+				<p class="banner__text banner__text_greetings">
+					<span class="banner__text_color">Hello,</span>
+					I&rsquo;m
+				</p>
+				<h1 class="banner__heading">
+					<span class="banner__heading-text">Artiom</span>
+					<span class="banner__heading-text">Mezheynikov</span>
+				</h1>
+				<p class="banner__text">HTML developer</p>
+				<a class="banner__button button" href="#!">let&rsquo;s talk</a>
+			</div>
+
+			<div class="socials">
+				<ul class="socials__list">
+					<li class="socials__item">
+						<a class="socials__link" href="https://www.instagram.com/artiommezheinikov/" target="_blank">
+							<svg class="socials__icon" viewBox="0 0 24 24" width="24" height="24">
+								<use xlink:href="/images/sprite-icons.svg#social-instagramm"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="socials__item">
+						<a class="socials__link" href="https://vk.com/id409841216" target="_blank">
+							<svg class="socials__icon" viewBox="0 0 24 24" width="24" height="24">
+								<use xlink:href="/images/sprite-icons.svg#social-vk"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="socials__item">
+						<a class="socials__link" href="https://t.me/ArtiomMezheynikov" target="_blank">
+							<svg class="socials__icon" viewBox="0 0 24 24" width="24" height="24">
+								<use xlink:href="/images/sprite-icons.svg#social-telegram"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="socials__item">
+						<a class="socials__link" href="https://github.com/Artiom-Work" target="_blank">
+							<svg class="socials__icon" viewBox="0 0 24 24" width="24" height="24">
+								<use xlink:href="/images/sprite-icons.svg#social-github"></use>
+							</svg>
+						</a>
+					</li>
+				</ul>
+			</div>
+
+			<picture class="header__pictures">
+				<source srcset="images/header/header-photo.png" media="(min-width: 320px)" />
+				<img class="header__picture" src="images/header/header-photo.png" alt="Artem Mezheynikov's photo" />
+			</picture>
+		</div>
+
+		<div class="header__shadow-background"></div>
+	</header>
 
 	<script type="module" src="js/main.js"></script>
 </body>
